First cut at a aarch64 build - not fit for human consumption

--- a/src/main/native/compression/CMakeLists.txt
+++ b/src/main/native/compression/CMakeLists.txt
@@ -60,3 +60,6 @@ add_library(${TARGET} SHARED
 add_dependencies(${TARGET} isalExternal otc_zlibExternal)
 target_link_libraries(${TARGET} zlibstatic isal)
 install(TARGETS ${TARGET} DESTINATION ${CMAKE_BINARY_DIR})
+
+
+include_directories(../../../../simde)
