--- a/src/main/native/smithwaterman/CMakeLists.txt
+++ b/src/main/native/smithwaterman/CMakeLists.txt
@@ -4,15 +4,15 @@
 if(NOT APPLE)
   set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--no-as-needed")
 endif()
-set_property(SOURCE avx2_impl.cc APPEND_STRING PROPERTY COMPILE_FLAGS " -mavx -mavx2 ")
-set_property(SOURCE avx512_impl.cc APPEND_STRING PROPERTY COMPILE_FLAGS " -mavx -mavx2 -mavx512f -mavx512dq -mavx512vl -mavx512bw ")
+#set_property(SOURCE avx2_impl.cc APPEND_STRING PROPERTY COMPILE_FLAGS " -mavx -mavx2 ")
+#set_property(SOURCE avx512_impl.cc APPEND_STRING PROPERTY COMPILE_FLAGS " -mavx -mavx2 -mavx512f -mavx512dq -mavx512vl -mavx512bw ")
 
 
 #---------------------------------------------------------------------
 # common includes
 #---------------------------------------------------------------------
 include_directories(../common)
-
+include_directories(../../../../simde)
 
 #---------------------------------------------------------------------
 # smithwaterman
