Add SIMDe usage throughout except for avx512f and blocked out for Arm

--- a/src/main/native/compression/CMakeLists.txt
+++ b/src/main/native/compression/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 
 include(ExternalProject)
+include_directories(../../../../simde)
 
 #---------------------------------------------------------------------
 # otc_zlib
