--- a/src/main/native/utils/CMakeLists.txt
+++ b/src/main/native/utils/CMakeLists.txt
@@ -2,7 +2,11 @@
 # utils
 #---------------------------------------------------------------------
 include_directories(../common)
+if (NOT $ENV{SSE2NEON} STREQUAL "")
+include_directories(../../../../sse2neon)
+else()
 include_directories(../../../../simde)
+endif()
 
 find_package(OpenMP)
 
