--- a/src/main/native/pairhmm/CMakeLists.txt
+++ b/src/main/native/pairhmm/CMakeLists.txt
@@ -22,7 +22,13 @@ endif()
 # common includes
 #---------------------------------------------------------------------
 include_directories(../common)
+
+if (NOT $ENV{SSE2NEON} STREQUAL "")
+include_directories(../../../../sse2neon)
+else()
 include_directories(../../../../simde)
+endif()
+
 #---------------------------------------------------------------------
 # pairhmm
 #---------------------------------------------------------------------
