more cmake for sse2neon;

--- a/src/main/native/pairhmm/CMakeLists.txt
+++ b/src/main/native/pairhmm/CMakeLists.txt
@@ -25,6 +25,7 @@ include_directories(../common)
 
 if (NOT $ENV{SSE2NEON} STREQUAL "")
 include_directories(../../../../sse2neon)
+add_definitions( -DSSE2NEON )
 else()
 include_directories(../../../../simde)
 endif()
