--- a/src/main/native/smithwaterman/CMakeLists.txt
+++ b/src/main/native/smithwaterman/CMakeLists.txt
@@ -23,6 +23,7 @@ endif()
 include_directories(../common)
 if (NOT $ENV{SSE2NEON} STREQUAL "")
 include_directories(../../../../sse2neon)
+add_definitions( -DSSE2NEON )
 else()
 include_directories(../../../../simde)
 endif()
