--- a/src/main/native/compression/otc_zlib/CMakeLists.txt
+++ b/src/main/native/compression/otc_zlib/CMakeLists.txt
@@ -127,7 +127,15 @@ set(ZLIB_SRCS
     zutil.c
 )
 
-if (CMAKE_C_COMPILER_ID STREQUAL "GNU" OR CMAKE_C_COMPILER_ID STREQUAL "Clang")
+if (CMAKE_SYSTEM_PROCESSOR MATCHES "(x86)|(X86)|(amd64)|(AMD64)")
+    set (X86 TRUE)
+    message("Is x86")
+else ()
+    set (X86 FALSE)
+    message("Is not x86")
+endif ()
+
+if ((CMAKE_C_COMPILER_ID STREQUAL "GNU" OR CMAKE_C_COMPILER_ID STREQUAL "Clang")) AND X86)
     set_source_files_properties(crc_folding.c PROPERTIES COMPILE_OPTIONS "-mpclmul;-msse4")
     set_source_files_properties(slide_sse.c PROPERTIES COMPILE_OPTIONS -msse2)
     set_source_files_properties(deflate_quick.c PROPERTIES COMPILE_OPTIONS -msse4)
